--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "deploy": "wrangler pages deploy ./public"
   },
   "devDependencies": {
+    "@aws-sdk/client-s3": "^3.958.0",
     "@cloudflare/workers-types": "^4.20241218.0",
     "typescript": "^5.3.3",
     "wrangler": "^3.99.0"
