--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "@cloudflare/workers-types": "^4.20241218.0",
     "typescript": "^5.3.3",
     "wrangler": "^3.99.0"
+  },
+  "dependencies": {
+    "@aws-sdk/credential-providers": "^3.958.0"
   }
 }
