--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,15 +1,14 @@
 # Cloudflare Pages configuration
-name = "webdav-s3-gateway"
+name = "webdav-s3-test"
 compatibility_date = "2024-12-18"
 
 # Pages specific settings
 pages_build_output_dir = "./public"
 
-# Environment variables (set these in Cloudflare dashboard or use .dev.vars for local dev)
-# [vars]
-# WEBDAV_URL = "https://your-webdav-server.com/dav/"
-# WEBDAV_USERNAME = "username"
-# WEBDAV_PASSWORD = "password"
-# S3_ACCESS_KEY_ID = "your-access-key-id"
-# S3_SECRET_ACCESS_KEY = "your-secret-access-key"
-# S3_REGION = "us-east-1"
+# Environment variables
+# NOTE: Sensitive credentials (WEBDAV_*, S3_*) should be set as secrets via:
+#   npx wrangler pages secret put <NAME> --project-name webdav-s3-test
+# Only non-sensitive config should be in [vars]
+[vars]
+CACHE_MAX_AGE = "15552000"  # Half year in seconds (180 days)
+
